Fix high-res flag cropping

--- a/src/style/common/high-res-flags.less
+++ b/src/style/common/high-res-flags.less
@@ -7,8 +7,8 @@
     cursor: not-allowed;
   }
   .flag {
-    width: 25px;
-    height: 20px;
+    width: 22px;
+    height: 16px;
     background-image: url("./high-res.png");
     background-repeat: no-repeat;
   }
