--- a/src/style/high-res.less
+++ b/src/style/high-res.less
@@ -75,7 +75,7 @@
     .flag {
       position: absolute;
       top: 50%;
-      margin-top: -12px;
+      margin-top: -8px;
     }
     .arrow {
       position: relative;
@@ -110,7 +110,6 @@
       display: inline-block;
       position: absolute;
       left: 10px;
-      top: 3px;
     }
     .divider {
       padding-bottom: 5px;
